@@ -1992,7 +1992,7 @@ SQLcatalog(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci)
 		return msg;
 
 	if (STORE_READONLY(active_store_type)) 
-		return sql_message("schema statements cannot be executed on a readonly database.");
+		return sql_message("SQLException:sql.catalog: schema statements cannot be executed on a readonly database.");
 
 	switch (type) {
 	case DDL_CREATE_SEQ:
@@ -2006,7 +2006,10 @@ SQLcatalog(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci)
 		sql_sequence *s = *(sql_sequence**) getArgReference(stk, pci, 3);
 		if (getArgType(mb, pci, 4) == TYPE_lng) 
 			val = getArgReference(stk, pci, 4);
-		msg = alter_seq(sql, sname, s, val);
+		if (val == NULL || *val == lng_nil)
+			msg = sql_message("ALTER SEQUENCE: cannot (re)start with NULL");
+		else
+			msg = alter_seq(sql, sname, s, val);
 	} 	break;
 	case DDL_DROP_SEQ: {
 		str name = *(str*) getArgReference(stk, pci, 3);
@@ -2358,6 +2361,8 @@ mvc_restart_seq(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci)
 	(void) cntxt;
 	if (msg)
 		return msg;
+	if (*start == lng_nil)
+		throw(SQL, "sql.restart", "cannot (re)start with NULL");
  	s = mvc_bind_schema(m, *sname);
 	if (s) {
 		sql_sequence *seq = find_sql_sequence(s, *seqname);
@@ -2367,7 +2372,7 @@ mvc_restart_seq(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci)
 			return MAL_SUCCEED;
 		}
 	}
-	throw(SQL, "sql.restart", "error");
+	throw(SQL, "sql.restart", "sequence %s not found", *sname);
 }
 
 
